tests/ui/monoid/unimplemented_semigroup.stderr
error[E0433]: failed to resolve: could not find `annotation` in `op`
 --> tests/ui/monoid/unimplemented_semigroup.rs:6:24
  |
6 |     #[semigroup(with = "semigroup::op::annotation::coalesce::Coalesce")]
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `annotation` in `op`
  |
help: consider importing one of these modules
  |
1 + use semigroup::op::coalesce;
  |
1 + use semigroup_base::op::coalesce;
  |

error[E0277]: the trait bound `Option<u32>: Semigroup` is not satisfied
 --> tests/ui/monoid/unimplemented_semigroup.rs:3:35
  |
3 | #[derive(Debug, Clone, PartialEq, Semigroup)]
  |                                   ^^^^^^^^^ the trait `Semigroup` is not implemented for `Option<u32>`
  |
  = help: the following other types implement trait `Semigroup`:
            Annotated<T, A>
            Coalesce<T>
            Gcd<T>
            HdrHistogram<T>
            Lcm<T>
            Max<T>
            Min<T>
            NamedStruct<'a>
          and $N others
  = note: this error originates in the derive macro `Semigroup` (in Nightly builds, run with -Z macro-backtrace for more info)
